opam-version: "2.0"
name: "inhca"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/paurkedal/inhca/"
bug-reports: "https://github.com/paurkedal/inhca/issues"
depends: [
  "ocaml"
  "config-file"
  "mirage-crypto-rng-lwt"
  "eliom" {>= "10.0.0"}
  "fd-send-recv"
  "fmt"
  "mirage-crypto-rng-lwt"
  "ocamlfind" {build}
  "prime"
  "ptime"
  "topkg" {build}
  "x509" {>= "0.8.1"}
]
build: ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
dev-repo: "git+https://github.com/paurkedal/inhca.git"
synopsis: "Simple online CA for in-house use"
