opam-version: "2.0"
name: "inhca"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/paurkedal/inhca/"
bug-reports: "https://github.com/paurkedal/inhca/issues"
depends: [
  "decoders-yojson"
  "dune" {>= "2.8.5"}
  "fd-send-recv"
  "fmt"
  "jose"
  "js_of_ocaml-compiler"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "js_of_ocaml-tyxml"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "logs"
  "mirage-crypto-pk"
  "mirage-crypto-rng"
  "mirage-crypto-rng-lwt"
  "ocaml" {>= "4.08.1"}
  "dream" {>= "1.0.0~"}
  "ppx_deriving_rpc"
  "ppx_deriving_yojson"
  "prime"
  "ptime"
  "rpclib"
  "rpclib-lwt"
  "sqlite3"
  "x509" {>= "0.8.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "install" "-p" name "--create-install-file" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/inhca.git"
synopsis: "Simple online CA for in-house use"
