(library
 (name inhca_web_server)
 (public_name inhca.web.server)
 (preprocess (pps
    lwt_ppx
    ppx_deriving_rpc
    ppx_deriving_yojson))
 (libraries
    fd-send-recv
    decoders-yojson
    dream
    fmt
    jose
    logs
    logs.fmt
    logs.lwt
    lwt
    mirage-crypto-rng
    mirage-crypto-rng-lwt
    prime
    ptime
    ptime.clock.os
    rpclib.core
    rpclib.json
    rpclib-lwt
    sqlite3
    tyxml
    x509))

(copy_files# ../shared/*.{ml,mli})
